Text objects no-longer are filled by default #62866

Closed
opened 2019-03-22 23:33:56 +01:00 by Kenzie · 12 comments
Contributor

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35

Blender Version
Broken: version: 2.80 (sub 51), branch: master (modified), commit date: 2019-03-22 19:36, hash: 967364dc3e
Worked: Pre https://developer.blender.org/rBbc5b0f7a091c3955263701be8c858fd56f8ba59f patch

Short description of error
Text objects no-longer are full as of the change to default fill mode to full (Can't help but feel this is my fault) for 3D curves this has the opposite affect on 2D curves.
As far as I can tell for some reason blender's curve system treats the back and front flags on curves as what sides to cull on 3D curves. While 2D curves use the same flag to determine what sides to fill. I'm not sure if the correct approach would be to fix the add text function to create a curve with these flags enabled or if this should be considered a bigger issue to cleanup for consistency.

Exact steps for others to reproduce the error
Add a Text object...

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35 **Blender Version** Broken: version: 2.80 (sub 51), branch: master (modified), commit date: 2019-03-22 19:36, hash: `967364dc3e` Worked: Pre https://developer.blender.org/rBbc5b0f7a091c3955263701be8c858fd56f8ba59f patch **Short description of error** Text objects no-longer are full as of the change to default fill mode to full (Can't help but feel this is my fault) for 3D curves this has the opposite affect on 2D curves. As far as I can tell for some reason blender's curve system treats the back and front flags on curves as what sides to cull on 3D curves. While 2D curves use the same flag to determine what sides to fill. I'm not sure if the correct approach would be to fix the add text function to create a curve with these flags enabled or if this should be considered a bigger issue to cleanup for consistency. **Exact steps for others to reproduce the error** Add a Text object...
Author
Contributor

Added subscriber: @KenzieMac130

Added subscriber: @KenzieMac130

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

This is an unintended consequence of the fact that curves now default to Full fill mode, which doesn't exist for text objects, and so it falls back to None.

Either we could override the default for text objects, or make it so it falls back to Both?

This is an unintended consequence of the fact that curves now default to Full fill mode, which doesn't exist for text objects, and so it falls back to None. Either we could override the default for text objects, or make it so it falls back to Both?
Author
Contributor

I'd vote to override the defaults for text since it seems like the better short term solution. It should keep the best of both worlds (full curves and full text). Its just curious that blender has this discrepancy in the meaning behind those flags in 2D and 3D, I'm pretty sure that decision was made long ago and might be worth looking into cleaning up that inconsistency in a future task. For now since I was the one who authored the original change I'm going to try to fix this one by overriding the defaults for text objects and I'll post the diff if that's okay.

Edit: actually I'm considering just moving where curves get set to default in the editcurve_add.c since it seem's that some older code that uses curves might make some assumptions about the flags on curve object (this turned out to be a bigger mess than I initially anticipated) Either way I'll try to get it fixed.

I'd vote to override the defaults for text since it seems like the better short term solution. It should keep the best of both worlds (full curves and full text). Its just curious that blender has this discrepancy in the meaning behind those flags in 2D and 3D, I'm pretty sure that decision was made long ago and might be worth looking into cleaning up that inconsistency in a future task. For now since I was the one who authored the original change I'm going to try to fix this one by overriding the defaults for text objects and I'll post the diff if that's okay. Edit: actually I'm considering just moving where curves get set to default in the editcurve_add.c since it seem's that some older code that uses curves might make some assumptions about the flags on curve object (this turned out to be a bigger mess than I initially anticipated) Either way I'll try to get it fixed.
Kenzie self-assigned this 2019-03-23 00:19:58 +01:00
Kenzie removed their assignment 2019-03-23 21:24:08 +01:00
Author
Contributor

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Contributor

After a long search through the code I think I've come across the easiest solution.
The diff file can be found here if anyone can approve it, thanks: https://developer.blender.org/D4581

After a long search through the code I think I've come across the easiest solution. The diff file can be found here if anyone can approve it, thanks: https://developer.blender.org/D4581
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Member

Bugs should not be closed until a patch has been committed.

Bugs should not be closed until a patch has been committed.
Author
Contributor

Apologies, I'm new to this.

Apologies, I'm new to this.

This issue was referenced by 7bfd3130fb

This issue was referenced by 7bfd3130fb7b53acca7b2211c0213f6ada51459d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62866
No description provided.