Fix T62866: 3D text not filled by default

Regression in bc5b0f7a091c395526370

See D4581